welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:4: error: value === is not a member of Boolean
	if (weekday===false || vacation==true) {
                   ^